# CPCargo

./: .gitignore  README.md  pyproject.toml
src/CPCargo/: __init__.py  cpcargo.py  cpcargo_main.py  handler.py  heartbeat.py  uploaders.py
test/: example.py
